# jsonx-gen

./: .env-example  .gitignore  README.md  example.json  main.py  pyproject.toml  requirements.txt  setup.py  todo.md
frontend/: index.html  styles.css
jsonx_gen/: cli.py  core.py  server.py
src/: __init__.py  cli.py  code_generator_registry.py  core.py  server.py  utils.py
