[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonx_gen"
version = "0.1.0"
description = "A tool to search JSON objects for keywords and generate extraction code"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Marc Scheu", email = "marc@scheu.org" },
]
keywords = ["json", "code-generation", "extraction", "search", "cli", "web-interface"]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Code Generators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.31.0",
  "ijson>=3.2.3"
]

[project.optional-dependencies]
web = [
  "fastapi>=0.68.0",
  "uvicorn>=0.15.0",
  "pydantic>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/maikiverse/jsonx-gen"
Documentation = "https://github.com/maikiverse/jsonx-gen#readme"
Source = "https://github.com/maikiverse/jsonx-gen"
BugTracker = "https://github.com/maikiverse/jsonx-gen/issues"

[project.scripts]
jsonx_gen = "jsonx_gen.cli:main"
jsonx_gen_web = "jsonx_gen.server:start"

[tool.setuptools]
package-data = { "jsonx_gen" = ["py.typed"] }
packages = ["jsonx_gen"]
